# ParalellComputations

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp  parallel_main.cpp  pseudo_parallel_main.cpp  pseudo_parallel_thomas.cpp  scheme.cpp  scheme.h  sequential_main.cpp  solver.cpp  solver.h  task.cpp  task.h  test.cpp  test.h
lab1/: main.c
lab2/: main.c
lab5/: main.c  mycom.c
lab6/: ex10a.c
курсовая/: README.md  main.cpp  scheme.h  solver.h  task.h  test.cpp  test.h
